yet another upnp experiment